k8s/adminer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adminer
  namespace: basketball-league-tracker
  labels:
    app.kubernetes.io/name: basketball-league-tracker
    app.kubernetes.io/component: adminer
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: basketball-league-tracker
      app.kubernetes.io/component: adminer
  template:
    metadata:
      labels:
        app.kubernetes.io/name: basketball-league-tracker
        app.kubernetes.io/component: adminer
    spec:
      containers:
        - name: adminer
          image: adminer:4
          ports:
            - containerPort: 8080
              name: http
          resources:
            limits:
              memory: 128Mi
