k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: basketball-app
  namespace: basketball-league-tracker
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      service: app
  template:
    metadata:
      labels:
        service: app
    spec:
      containers:
        - name: app
          image: ognenmladenovski767/basketball-league-tracker:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: http

          startupProbe:
            httpGet:
              path: /actuator/health/readiness
              port: http
            periodSeconds: 5
            failureThreshold: 30

          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: http
            periodSeconds: 5

          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: http
            periodSeconds: 10
