k8s/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: db
  namespace: basketball-league-tracker
  labels:
    app.kubernetes.io/name: basketball-league-tracker
    app.kubernetes.io/component: database
spec:
  serviceName: db
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: basketball-league-tracker
      app.kubernetes.io/component: database
  template:
    metadata:
      labels:
        app.kubernetes.io/name: basketball-league-tracker
        app.kubernetes.io/component: database
    spec:
      containers:
        - name: postgres
          image: postgres:18-alpine
          ports:
            - containerPort: 5432
              name: postgres
          readinessProbe:
              exec:
                command:
                  - sh
                  - -c
                  - pg_isready -U "$POSTGRES_USER" -d "$POSTGRES_DB"
              initialDelaySeconds: 5
              periodSeconds: 5
              timeoutSeconds: 3

          livenessProbe:
            exec:
              command:
                - sh
                - -c
                - pg_isready -U "$POSTGRES_USER" -d "$POSTGRES_DB"
            initialDelaySeconds: 30
            periodSeconds: 15
            timeoutSeconds: 3
            failureThreshold: 3

          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql

  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
