k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: basketball-league-tracker-ingress
  namespace: basketball-league-tracker
  labels:
    app.kubernetes.io/name: basketball-league-tracker
spec:
  ingressClassName: nginx
  rules:
    - host: basketball-league-tracker.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app
                port:
                  name: http
    - host: adminer.basketball-league-tracker.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: adminer
                port:
                  name: http
